<resources>
    <string name="app_name">OrderFlower</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>

    <!-- Strings related to login -->
    <string name="prompt_userName">请输入昵称</string>
    <string name="prompt_telNumber">请输入手机号码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="prompt_verification_code">输入验证码</string>
    <string name="next_step">下一步</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_confirm_password">请确认密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register_in">没有密码？点次注册</string>
    <string name="action_register">注册并登录</string>
    <!--引导页面-->
    <string name="begin_button">开始使用</string>
    <!--个人界面-->
    <string name="up_load_face">上传头像</string>
    <!--首页-->
    <string name="brief">简介</string>
    <string name="name">名称</string>
    <string name="price">￥0.00</string>
    <!--ActionBar-->
    <string name="back">返回</string>
    <string name="address">十陵</string>
    <string name="gps_location">定位</string>
    <string name="search">搜索</string>
    <string name="search_hint">  花之苑</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_base">BaseActivity</string>
</resources>
