<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.summer.orderflower.activity.SearchActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#05c0af">
        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:background="#05c0af"/>
        <SearchView
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:id="@+id/goods_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="#ffffff"
            android:queryHint="@string/search_hint"
            android:iconifiedByDefault="false"/>
        <Button
            android:id="@+id/btn_goods_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#05c0af"
            android:text="@string/search"/>
    </LinearLayout>
    <ListView
        android:id="@+id/search_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
